# TIPE

./: .gitignore  README  TIPE.opam  dune-project  main.c
lib/ast/: ast.ml
lib/lexer/: lexer.mll
lib/parser/: parser.mly
