(lang dune 3.6)

(name TIPE)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)
(using menhir 2.1)
(package
 (name TIPE)
 (synopsis "A short synopsis")
 (description "A longer description")

 (tags
  ("add topics" "to describe" "your project"))
 (allow_empty))

